2017-01-08  Sandra Loosemore  <sandra@codesourcery.com>
	PR middle-end/17660

	gcc/
	* extend.texi (Common Variable Attributes): Add xref to GCC
	Internals manual to explain mode attribute keywords.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244215 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,12 @@
 2017-01-08  Sandra Loosemore  <sandra@codesourcery.com>
 
+	PR middle-end/17660
+
+	* extend.texi (Common Variable Attributes): Add xref to GCC
+	Internals manual to explain mode attribute keywords.
+
+2017-01-08  Sandra Loosemore  <sandra@codesourcery.com>
+
 	PR other/16519
 
 	* doc/invoke.texi (Option Summary): Move -pthread to Linker Options
