--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-09  Richard Biener  <rguenther@suse.de>
+
+	PR debug/79000
+	* dwarf2out.c (is_cxx): New overload with context.
+	(is_naming_typedef_decl): Use it.
+
 2017-01-08  Sandra Loosemore  <sandra@codesourcery.com>
 
 	* invoke.texi (Option Summary): Correct spacing in option lists
