--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-09  Richard Biener  <rguenther@suse.de>
+
+	PR debug/79000
+	* g++.dg/lto/pr79000_0.C: New testcase.
+	* g++.dg/lto/pr79000_1.c: Likewise.
+
 2017-01-08  Martin Sebor  <msebor@redhat.com>
 
 	PR middle-end/77708
