[tree-ssa-address] Avoid creating non-canonical RTL in gen_addr_rtx
	* tree-ssa-address.c (gen_addr_rtx): Don't handle index if it
	is const0_rtx.

	* gcc.dg/20161219.c: New test.



git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244219 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2017-01-09  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* tree-ssa-address.c (gen_addr_rtx): Don't handle index if it
+	is const0_rtx.
+
 2017-01-09  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/78997
