--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-09  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>
+
+	* gcc.dg/20161219.c: New test.
+
 2017-01-09  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/78997
