PR c++/78948 	* g++.dg/cpp1z/constexpr-if10.C: Fix PR number in comment. 	(main): Use int* instead of long long.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244228 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,5 +1,9 @@
 2017-01-09  Jakub Jelinek  <jakub@redhat.com>
 
+	PR c++/78948
+	* g++.dg/cpp1z/constexpr-if10.C: Fix PR number in comment.
+	(main): Use int* instead of long long.
+
 	PR tree-optimization/78938
 	* gcc.dg/vect/pr78938.c: New test.
 
