* da.po, es.po, sv.po, vi.po: Update.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244229 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/po/ChangeLog
+++ b/gcc/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-09  Joseph Myers  <joseph@codesourcery.com>
+
+	* da.po, es.po, sv.po, vi.po: Update.
+
 2017-01-06  Joseph Myers  <joseph@codesourcery.com>
 
 	* fr.po: Update.
