--- a/libcpp/po/ChangeLog
+++ b/libcpp/po/ChangeLog
@@ -1,3 +1,7 @@
+2017-01-09  Joseph Myers  <joseph@codesourcery.com>
+
+	* vi.po: Update.
+
 2017-01-05  Joseph Myers  <joseph@codesourcery.com>
 
 	* pt_BR.po, ru.po: Update.
