PR libgomp/60670 	* Makefile.am: Make fincludedir multilib-aware. 	* Makefile.in: Regenerate.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@244239 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libgomp/ChangeLog
+++ b/libgomp/ChangeLog
@@ -1,3 +1,9 @@
+2017-01-09  Francois-Xavier Coudert  <fxcoudert@gcc.gnu.org>
+
+	PR libgomp/60670
+	* Makefile.am: Make fincludedir multilib-aware.
+	* Makefile.in: Regenerate.
+
 2017-01-01  Jakub Jelinek  <jakub@redhat.com>
 
 	Update copyright years.
